--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "boiler-plate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server/index.js",
-    "backend": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client \""
-  },
-  "author": "anxiubin",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+	"name": "boiler-plate",
+	"version": "1.0.0",
+	"description": "node react boiler plate",
+	"main": "index.js",
+	"scripts": {
+		"start": "node server/index.js",
+		"backend": "nodemon server/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "concurrently \"npm run backend\" \"npm run start --prefix client \""
+	},
+	"author": "anxiubin",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.0.0",
+		"body-parser": "^1.19.0",
+		"concurrently": "^5.2.0",
+		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
+		"mongoose": "^5.12.0",
+		"path": "^0.12.7"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	}
 }
