--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # Dependency directories
-node_modules
+/node_modules
+/build
 
 # environment variables file
 dev.js
+
+.DS_Store
+
+npm-debug.log*
+yarn-debug.kog*
+yarn-error.log*
+
+.vscode
